--- a/src/components/LK/PersonalDataPage/PersonalDataPage.module.css
+++ b/src/components/LK/PersonalDataPage/PersonalDataPage.module.css
@@ -1,20 +1,24 @@
 .wrap {
     height: 350px;
-    width: 250px;
+    width: 350px;
     border-radius: 15px;
-    margin-top: 10px;
     padding-left: 10px;
-    margin-left: 4px;
     box-shadow:  var(--box-shadow-content);
     background-color: var(--background-color-contentLight);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     font-size: 19px;
+    margin: 20px;
+}
+@media (max-width: 991px) {
+    .wrap {
+        margin-left: 8px;
+    }
 }
 @media (max-width: 430px) {
     .wrap {
-        width: 170px;
-       
+        width: 200px;
+        margin-left: 5px;
     }
 }
