--- a/src/components/Auth/RegisterPage.module.css
+++ b/src/components/Auth/RegisterPage.module.css
@@ -64,6 +64,11 @@
     border-style: none;
     background-color: var(--background-color-contentLight);
     }
+    .registration {
+        color: blue;
+        font-size: 27px;
+        font-weight: 700;
+    } 
 
 @media (max-width: 430px) {
         .authWrap {
@@ -82,5 +87,10 @@
         .input {
             font-size: 18px;
         }
+        .registration {
+            color: blue;
+            font-size: 21px;
+            font-weight: 700;
+        } 
 
-} 
+}
