--- a/src/components/Core/Container.module.css
+++ b/src/components/Core/Container.module.css
@@ -1,12 +1,8 @@
 .mainWrap {
     display: flex;
     flex-direction: column;
-    /* Зачем flex-direction если меняется только ось? */
 }
 .container {
-    /* width: 1140px;
-    margin: 0 auto;*/
-    /* Лучше для адаптации через фикс. или %? */
     width: 90%;
     max-width: 1440px;
     margin: 0 auto;
@@ -16,7 +12,7 @@
 .innerWrap {
     /* реализация через флекс-бокс */
     /* display: flex; */
-    /* flex-direction: row; ??? */
+    /* flex-direction: row; */
     
     /* реализация через грид-бокс */
     display: grid;
@@ -25,21 +21,35 @@
   
 }
 .mainContentWrap {
-    /* flex: 1; */
-    /* background-color: rgb(127, 255, 127); */
-    margin-top: 4px;
+    /* background-color: rgb(127, 255, 127);
     margin-left: 4px;
-    margin-bottom: 4px;
+    margin-top: 3px; */
     height: 100%;
 }
 
 @media (max-width: 991px) {
+    .innerWrap {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto; 
+    }
+    .innerWrapTrue {
+        grid-template-columns: 120px auto;
+        grid-template-rows: auto;
+    }
+}
+
+/* @media (max-width: 991px) {
     .innerWrap  {
         grid-template-columns: auto;
         grid-template-rows: auto;
-}
+    }
+    .innerWrapTrue {
+        grid-template-columns: 120px auto;
+        grid-template-rows:  auto;
+    }
 }
 .innerWrapTrue {
     grid-template-columns: 150px auto;
     grid-template-rows: auto auto;
-}
+} */
