--- a/src/components/DeliveryPage/DeliveryPage.module.css
+++ b/src/components/DeliveryPage/DeliveryPage.module.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
-    margin-left: 4px;
+    margin: 20px;
+    margin-top: 10px;
 }
 .contentBox{
     width: 600px;
@@ -57,6 +58,18 @@
         flex-wrap: wrap;
         gap: 20px;
     }
+    .partnerWrap {
+        width: 580px;
+    }
+    .contentBox {
+        width: 580px;
+    }
+}
+@media (max-width: 991px) {
+    .deliveryWrap {
+        margin: 10px;
+    }
+   
 }
 @media (max-width: 430px) {
     .contentBox {
@@ -69,8 +82,9 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        
-       
+    }
+    .deliveryWrap {
+        margin: 5px;
     }
    
 }
