--- a/src/components/LK/CabinetPage.module.css
+++ b/src/components/LK/CabinetPage.module.css
@@ -3,20 +3,26 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
-    margin-left: 4px;
+    margin: 20px;
 }
 .contentBox{
-    width: 600px;
+    width: 580px;
     background-color: var(--background-color-contentLight);
     border-radius: 15px;
-    margin-top: 10px;
     padding-left: 10px;
     box-shadow:  var(--box-shadow-content);
 }
+@media (max-width: 991px) {
+    .cabinetPageWrap {
+        margin-left: 8px;
+    }
+} 
 @media (max-width: 430px) {
     .contentBox {
-        width: 135px;
+        width: 175px;
         font-size: 15px;
-        padding-left: 5px;
+    }
+    .cabinetPageWrap {
+        margin-left: 5px;
     }
 } 
