--- a/src/components/LK/Core/Container.module.css
+++ b/src/components/LK/Core/Container.module.css
@@ -10,26 +10,37 @@
 
 }
 .innerWrap {
-    /* реализация через грид-бокс */
     display: grid;
     grid-template-columns: 150px auto;
     grid-template-rows: auto auto;
     
 }
 .mainContentWrap {
-    /* background-color: rgb(77, 255, 77); */
-    margin-top: 4px;
+    /* background-color: rgb(77, 255, 77);
     margin-left: 4px;
+    margin-top: 3px; */
     height: 100%;
 }
+
 @media (max-width: 991px) {
+    .innerWrap {
+        display: grid;
+        grid-template-columns: 120px auto;
+        grid-template-rows: auto; 
+    }
+    .innerWrapTrue {
+        grid-template-columns: 120px auto;
+        grid-template-rows: auto;
+    }
+}
+
+/* @media (max-width: 991px) {
     .innerWrap  {
         grid-template-columns: auto;
         grid-template-rows: auto;
-}
+    }
 }
 .innerWrapTrue {
     grid-template-columns: 150px auto;
     grid-template-rows: auto auto;
-}
-
+} */
