--- a/src/components/OrderPage/OrderPage.module.css
+++ b/src/components/OrderPage/OrderPage.module.css
@@ -3,7 +3,6 @@
 }
 .orderWrap {
     width: 800px;
-    margin: 20px;
     background-color: var(--background-color-contentLight);
     /* border: var(--border-content); */
     box-shadow:  var(--box-shadow-content); 
@@ -14,19 +13,21 @@
     align-items: center;
     gap: 20px;
     padding-bottom: 10px;
+    margin: 20px;
 }
 /* Медиа запросы */
 @media (max-width: 991px) {
     .orderWrap  {
-        width: 640px;
-        margin: 10px;
+        width: 600px;
+        margin-left: 8px;
+        margin-top: 20px;;
     }
 }
 @media (max-width: 430px) {
     .orderWrap  {
-        width: 280px;
-        margin: 3px;
-        margin-left: 4px;
+        width: 250px;
+        margin: 15px;
+        margin-left: 5px;
         
     }
    
