--- a/src/components/PayPage/PayPage.module.css
+++ b/src/components/PayPage/PayPage.module.css
@@ -4,7 +4,8 @@
     grid-template-rows: auto auto;
     column-gap: 50px;
     row-gap: 30px;
-    margin-left: 4px;
+    margin: 20px;
+    margin-top: 10px;
 }
 
 .personWrap {
@@ -63,7 +64,7 @@
     text-indent: 10px;
 }
 /* Медиа запросы */
-@media (max-width: 991px) {
+@media (max-width: 1200px) {
     .payWrap {
         display: flex;
         flex-direction: column;
@@ -75,6 +76,11 @@
         margin-top: 240px;
     }
 }
+@media (max-width: 991px) {
+    .payWrap {
+        margin: 10px;
+    }
+}
 @media (max-width: 430px) {
     .payWrap {
         display: flex;
@@ -82,6 +88,7 @@
         flex-wrap: wrap;
         gap: 20px;
         width: 270px;
+        margin: 5px;
     }
     .media {
         position: absolute;
@@ -93,6 +100,5 @@
     .description {
         width: 270px;
         height: auto;
-        margin-bottom: 5px; 
     }
 }
