--- a/src/components/ProductCard/ProductCardID.module.css
+++ b/src/components/ProductCard/ProductCardID.module.css
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 50px;
+    margin-bottom: 20px;
     /* flex-direction: row; */  
 }
 .cardWrapID {
@@ -48,7 +49,7 @@
     font-size: 21px;
 }
 /* Медиа запросы */
-@media (max-width: 991px) {
+@media (max-width: 1100px) {
     .cardWrapID {
         height: 950px;
         width: 500px;
