поправил стили и адаптацию

--- a/src/components/Auth/AuthPage.module.css
+++ b/src/components/Auth/AuthPage.module.css
@@ -74,12 +74,16 @@
         width: 230px;
     }
     .buttonSubmit {
-        font-size: 22px;
+        font-size: 20px;
+        width: 130px;
+
     }
     .input {
         font-size: 18px;
     }
-    
+    .select, .selectАctive {
+        font-size: 23px;
+    }
 } 
 
 
