--- a/src/components/LeftMenu/LeftMenu.module.css
+++ b/src/components/LeftMenu/LeftMenu.module.css
@@ -68,9 +68,9 @@
     border-radius: 10px;
     box-shadow: inset 3px -3px 2px var(--background-color-contentLarge),
     inset 3px 3px 2px var(--background-color-contentLarge);
+    width: 100%;
 }
 .popUpMenu .all{
-
     margin-top: 20px;
 }
 @media (max-width: 991px) {
@@ -86,8 +86,11 @@
     .popUpMenu:hover {
         transform: translateX(120px);
     }
+    /* .phone,.laptop,.tv,.all {
+        width: 120px;
+    } */
 }
-@media (max-width: 360px) {
+@media (max-width: 430px) {
     /* .popUpMenu {  
         top: 124px;
     } */
@@ -102,5 +105,9 @@
     }
     .link:hover {
         transform: none;
+        transform: scale(1.0);
+    }
+    .phone,.laptop,.tv,.all {
+        width: 120px;
     }
 }
