--- a/src/components/OrderPage/OrderPage.module.css
+++ b/src/components/OrderPage/OrderPage.module.css
@@ -20,7 +20,7 @@
     .orderWrap  {
         width: 600px;
         margin-left: 8px;
-        margin-top: 20px;;
+        margin-top: 20px;
     }
 }
 @media (max-width: 430px) {
