--- a/src/components/ProductCard/ProductCardID.module.css
+++ b/src/components/ProductCard/ProductCardID.module.css
@@ -66,16 +66,16 @@
 @media (max-width: 430px) {
     .cardWrapID {
         height: auto;
-        width: 280px; 
+        width: 255px; 
     }
     .image {
-        height: 280px;
-        width: 280px;  
+        height: 255px;
+        width: 255px;  
     }
     .button {
-        height: 40px;
-        width: 200px;
-        font-size: 19px;
+        height: auto;
+        width: 255px;
+        font-size: 20px;
     }
     .productsWrap {
         margin-top: 10px;
