поправил стили и адаптацию

--- a/src/components/ProductCard/ProductCardID.module.css
+++ b/src/components/ProductCard/ProductCardID.module.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 10px;
+    font-family: 'Times New Roman', Times, serif;
 }
 .description {
     display: flex;
